# Sub8

./: Drag.py  Jenkinsfile  ReadMe.md  buoy_servo.py  estimate_drag_coefficients.py  install.sh  sub.rviz
command/sub8_alarm/: setup.py
command/sub8_alarm/alarm_handlers/: kill.py
command/sub8_alarm/nodes/: alarm_handler.py  network_keepalive.py
command/sub8_alarm/sub8_alarm/: alarm_helpers.py
command/sub8_launch/: package.xml
command/sub8_launch/config/: torpedo_target_acq.yaml
command/sub8_launch/launch/: sub8.launch  tf.launch  upload_urdf.launch
command/sub8_launch/launch/subsystems/: rise.launch
command/sub8_launch/scripts/: tf_republisher.py
command/sub8_mission_control/: CMakeLists.txt  package.xml  setup.py
command/sub8_mission_control/action/: current_goal.action
command/sub8_mission_control/src/: goal_client.py  goal_server.py  goal_unittest.py
command/sub8_mission_control/sub8_mission_control/: goal_client.py  goal_server.py
command/sub8_mission_control/tests/: test_goals.py
command/sub8_missions/missions/: align_channel.py  arm_torpedos.py  bin_dropper_3d.py  go_to_guess.py  roulette_wheel.py
command/sub8_missions/nodes/: cmd_mission  tx_mission
command/sub8_missions/sub8/: tx_sub.py
command/sub8_missions/sub8_missions/: pinger.py
drivers/sub8_rdi_dvl/include/rdi_explorer_dvl/: driver.h
drivers/sub8_videoray_m5_thruster/: setup.py
gnc/sub8_perception/nodes/: bins_2d.py  buoy_2d.py  follow_orange_pipes.py  ocr_server.py
gnc/sub8_perception/src/sub8_pcl/: sub8_gateway.py
gnc/sub8_perception/sub8_vision_tools/: rviz.py
gnc/sub8_system_id/: ReadMe.md
gnc/sub8_system_id/sub8_system_id/: estimate_drag_coefficients.py
gnc/sub8_thruster_mapper/nodes/: mapper.py
gnc/sub8_trajectory_generator/: CMakeLists.txt  README.md
gnc/sub8_trajectory_generator/include/sub8_trajectory_generator/: sub8_state_space.h  sub8_state_validity_checker.h  tgen_geometry_obstacles.h  tgen_manager.h  tgen_obstacle_checker.h
gnc/sub8_trajectory_generator/launch/: trajectory_generator_params.launch
gnc/sub8_trajectory_generator/src/: space_information_generator.cc  sub8_state_validity_checker.cc  tgen_geometry_obstacles.cc  tgen_manager.cc
gnc/sub8_trajectory_generator/test/: sub8_state_validity_checker_test.cc  tgen_geometry_obstacles_test.cc  tgen_integration.test  tgen_manager_test.cc
legacy/rise_6dof/: CMakeLists.txt  package.xml
legacy/rise_6dof/scripts/: do_spiral  joy_to_posetwist  rise_6dof  test  test_rviz
mil_common/mil_c3_tgen/: CMakeLists.txt  package.xml
mil_common/mil_c3_tgen/include/: AttitudeHelpers.h  C3Trajectory.h  msg_helpers.h  param_helpers.h
mil_common/mil_c3_tgen/src/: AttitudeHelpers.cpp  C3Trajectory.cpp  node.cpp
perception/sub8_mapping/include/: Mapping.hpp
perception/sub8_mapping/src/: Mapping.cpp
perception/sub8_perception/ml_classifiers/path_marker/: path_localizer.py
perception/sub8_perception/nodes/: guess_server.py  torpedo_target_acq.py
perception/sub8_pointcloud/include/: OGridGen.hpp
perception/sub8_pointcloud/src/: OGridGen.cpp
simulation/duck_gazebo/launch/: duck.launch~
simulation/sub8_3dsim/: CMakeLists.txt  README.md  package.xml  sim3d.py
simulation/sub8_3dsim/launch/: owl.launch
simulation/sub8_gazebo/: CMakeLists.txt  README.md  package.xml
simulation/sub8_gazebo/diagnostics/: job_runner.py
simulation/sub8_gazebo/include/sub8_gazebo/: sub8_sonar.hh  sub8_sonar.hpp
simulation/sub8_gazebo/launch/: barebones.launch  duck.launch
simulation/sub8_gazebo/models/: README.md
simulation/sub8_gazebo/models/GarlicDrop/: garlicDrop.dae  model.config  model.sdf
simulation/sub8_gazebo/models/TownParke_Pool/: model.config  model.sdf  pool3.dae
simulation/sub8_gazebo/models/start_gate_2019/: model.config  start_gate.sdf  start_gate_2019.dae
simulation/sub8_gazebo/models/steakThroughHeart/: model.config  model.sdf  shotThroughTheHeart.dae
simulation/sub8_gazebo/models/sub8/: sub8.sdf
simulation/sub8_gazebo/nodes/: fake_perception.py  gazebo_controller.py  pedometry.txt
simulation/sub8_gazebo/src/: sub8_sonar.cpp
simulation/sub8_gazebo/urdf/: sub8.urdf.xacro
simulation/sub8_gazebo/worlds/: gripper.world
simulation/sub8_simulation/: setup.py
simulation/sub8_simulation/launch/: sim_full.launch
utils/sub8_diagnostics/: CMakeLists.txt  package.xml
utils/sub8_diagnostics/scripts/: thruster_visualizer.py
utils/sub8_diagnostics/src/: move_test.cpp
utils/sub8_msgs/: CMakeLists.txt  package.xml
utils/sub8_msgs/action/: MoveTo.action
utils/sub8_msgs/srv/: Bounds.srv
utils/sub8_ros_tools/: CMakeLists.txt  setup.py
utils/sub8_ros_tools/so3tools/: demo_so3tools.py  so3tools.py
utils/sub8_ros_tools/sub8_ros_tools/: __init__.py  geometry_helpers.py  msg_helpers.py
utils/sub8_ros_tools/sub8_tools/: bounds.py
utils/sub8_ros_tools/test_ros_tools/: test_ros_tools.py  test_so3tools.py
utils/uf_common/: CMakeLists.txt  package.xml
