<?xml version="1.0"?>
<package>
  <name>sub8_diagnostics</name>
  <version>1.0.0</version>
  <description>The sub8 diagnostics package</description>

  <maintainer email="d.soto@ufl.edu">David Soto</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_runtime</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>mil_tools</build_depend>
  <build_depend>mil_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sub8_msgs</build_depend>
  <build_depend>actionlib</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>mil_tools</run_depend>
  <run_depend>mil_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sub8_msgs</run_depend>
  <run_depend>actionlib</run_depend>

</package>
